--- a/force-app/main/default/lwc/projectExpenseDashboard/projectExpenseDashboard.html
+++ b/force-app/main/default/lwc/projectExpenseDashboard/projectExpenseDashboard.html
@@ -1,7 +1,7 @@
 <template>
-    <lightning-card title="Projects & Expenses">
+    <lightning-card title="Projects and Expenses">
 
-        <!-- 🔍 SEARCH BAR -->
+        <!--SEARCH BAR -->
         <div class="slds-p-around_small">
             <lightning-input 
                 type="search"
@@ -13,6 +13,7 @@
         </div>
 
         <!-- MAIN PROJECT TABLE -->
+        <div class="slds-box">
         <c-custom-datatable-comp
             key-field="Id"
             data={filteredProjects}
@@ -20,10 +21,12 @@
             hide-checkbox-column
             onrowaction={handleRowAction}>
         </c-custom-datatable-comp>
+        </div>
+
 
         <!-- CHILD EXPENSE TABLE -->
         <template if:true={expandedProjectId}>
-            <div class="slds-m-top_medium slds-box slds-theme_shade">
+            <div class="slds-m-top_medium slds-box">
                 <h3 class="slds-text-heading_small slds-m-bottom_small">
                     Related Expenses
                 </h3>
